# 2022Offline

./: .gitignore  readme.md
src/P&C/: CMakeLists.txt  package.xml
src/P&C/include/common/: base.h  common.h
src/P&C/include/control/: actuator.h  controller.h
src/P&C/include/plan/: depthAvoid.h  planner.h
src/P&C/include/plan_env/: raycast.h  voxelmap.h
src/P&C/include/runnable/: backup.cpp  competition.h  competition.hpp  simulate.h
src/P&C/include/visual/: visualTools.h
src/P&C/launch/: AutoFly.launch
src/P&C/src/: autoFly.cpp
src/P&C/visual/meshes/: circle.dae
src/P&C/visual/rviz/: visual.rviz
src/controller/: CMakeLists.txt
src/controller/configs/meshes/: circle.mesh
src/controller/configs/rviz/: visual.rviz
src/controller/include/: common.h  competition.h  param.h  planner.h  simulate.h
src/controller/include/uav_control/: controller.h
src/controller/launch/: AutoFly.launch
src/controller/src/: autoFly.cpp  example.cpp
src/detection/: CMakeLists.txt  package.xml
src/detection/include/: detection.hpp
src/detection/include/detection/: object_detector.h  picodet_postprocess.h  preprocess_op.h
src/detection/launch/: detect.launch  rs_camera.launch
src/detection/src/: detect_node.cpp
src/detection/src/detect/: FindCircle.cc  object_detector.cc  picodet_postprocess.cc  preprocess_op.cc  utils.cc
src/detection/weights/pico_online/: infer_cfg.yml  model.pdmodel
src/simulation/competition_sim/: CMakeLists.txt  package.xml
src/simulation/competition_sim/launch/: empty_sim_with_d435i.launch  sim_with_d435i.launch
src/simulation/competition_sim/models/iris_D435i/: iris_D435i.sdf
src/simulation/competition_sim/models/mark_ring/: model.config  model.sdf
src/simulation/competition_sim/worlds/: empty.world  sim.world
src/simulation/realsense_ros_gazebo/launch/: simulation_D435i_sdf.launch
src/simulation/realsense_ros_gazebo/sdf/iris_D435i/: iris_D435i.sdf
